--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "astrokit"
-version = "0.0.2"
+version = "0.0.3"
 authors = [
   { name="Zhenhai CHEN", email="chenzhtbb@163.com" },
 ]
@@ -18,6 +18,7 @@ classifiers = [
 ]
 dependencies =[
     "wget",
+    "requests",
     "numpy",
     "scikit-image"
 ]
